--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -38,6 +38,16 @@ a {
 	.navigationPanel-logoToogleBox {
 		border-bottom: 1px solid $lightGrey;
 	}
+	.navigationPanel-logoToogleBox:hover {
+		.navigationPanel-logo {
+			opacity: 0.6;
+		}
+	}
+	.navigationPanel-logoToogleBox:active {
+		.navigationPanel-logo {
+			opacity: 0.3;
+		}
+	}
 
 	.navigationPanel-toogle {
 		box-sizing: border-box;
@@ -67,7 +77,7 @@ a {
 				position: absolute;
 				width: 20px;
 				height: 2px;
-				background-color: #000000;
+				background-color: $black;
 				transition: 0.2s;
 			}
 
@@ -442,6 +452,7 @@ a {
 		margin: 0 auto;
 	}
 
+	// arrows styling -------------------
 	.reviews-arrowLeft,
 	.reviews-arrowRight {
 		box-sizing: border-box;
@@ -450,13 +461,32 @@ a {
 		background-color: $white;
 		margin: 0px;
 		margin-top: 30px;
-		padding: 12px 42px;
-		width: 140px;
+		width: 150px;
+		height: 52px;
 
-		img {
-			width: 100%;
-		}
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: 45%;
 	}
+	.reviews-arrowLeft {
+		background-image: url("../img/reviews/arrow-left.svg");
+	}
+	.reviews-arrowRight {
+		background-image: url("../img/reviews/arrow-right.svg");
+	}
+	
+	.reviews-arrowLeft:hover {
+		opacity: 0.6;
+	}
+	.reviews-arrowLeft:active {
+		opacity: 0.3;
+	}
+	.reviews-arrowRight:hover {
+		opacity: 0.6;
+	}
+	.reviews-arrowRight:active {
+		opacity: 0.3;
+	} // end arrows styling -------------------
 
 	.reviews-btn {
 		box-sizing: border-box;
@@ -477,6 +507,15 @@ a {
 		font-weight: bold;
 		color: $darkGrey;
 	}
+	.reviews-btn:hover {
+		background-color: $darkGrey;
+		color: $white;
+	}
+	.reviews-btn:active {
+		background-color: $darkGrey;
+		color: rgba(255,255,255, 0.3);
+	}
+
 }
 .reviews::after {
 	content: url("../img/zigzagLine.svg");
@@ -515,6 +554,17 @@ a {
 			padding-left: 10%;
 		}
 	}
+	.contacts-email {
+    text-decoration: underline;
+    text-decoration-color: $turquoise;
+    cursor: pointer;
+	}
+	.contacts-email:hover {
+    color: $turquoise;
+	}
+	.contacts-email:active {
+    opacity: 0.3;
+	}
 
 	.contacts-map {
 		background-image: url("../img/contacts/map-tablet.jpg");
@@ -544,6 +594,15 @@ a {
 		font-weight: bold;
 		color: $darkGrey;
 	}
+	.contacts-btn:hover {
+		background-color: $darkGrey;
+		color: $white;
+	}
+	.contacts-btn:active {
+		background-color: $darkGrey;
+		color: rgba(255,255,255, 0.3);
+	}
+	
 } // ========== end contacts section ==========
 
 
@@ -552,6 +611,12 @@ a {
 // ========== footer ==========
 footer {
 	background-color: #f1f1f1;
+
+	.border_wrapper {
+		padding-top: 25px;
+		padding-bottom: 25px;
+		border-bottom: 1px solid #e5e5e5;
+	}
 
 	.social,
 	.htmlAcademy {
@@ -581,9 +646,33 @@ footer {
 		max-height: 30px;
 	}
 
-	.border_wrapper {
-		padding-top: 25px;
-		padding-bottom: 25px;
-		border-bottom: 1px solid #e5e5e5;
+	// hower active behavior style ----------
+	.footer-instagramImg:hover {
+		opacity: 0.6;
 	}
+	.footer-instagramImg:active {
+		opacity: 0.3;
+	}
+
+	.footer-facebookImg:hover {
+		opacity: 0.6;
+	}
+	.footer-facebookImg:active {
+		opacity: 0.3;
+	}
+
+	.footer-twitterImg:hover {
+		opacity: 0.6;
+	}
+	.footer-twitterImg:active {
+		opacity: 0.3;
+	}
+
+	.htmlAcademy:hover {
+		opacity: 0.6;
+	}
+	.htmlAcademy:active {
+		opacity: 0.3;
+	} // end hower active behavior style ----------
+
 } // ========== end footer ==========
