--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -38,16 +38,6 @@ a {
 	.navigationPanel-logoToogleBox {
 		border-bottom: 1px solid $lightGrey;
 	}
-	.navigationPanel-logoToogleBox:hover {
-		.navigationPanel-logo {
-			opacity: 0.6;
-		}
-	}
-	.navigationPanel-logoToogleBox:active {
-		.navigationPanel-logo {
-			opacity: 0.3;
-		}
-	}
 
 	.navigationPanel-toogle {
 		box-sizing: border-box;
@@ -127,9 +117,8 @@ a {
 
 	}
 
-	// ---------- navigation panel styling ----------
+	// ---------- navigation list styling ----------
 	.navigationPanel-navigation {
-		overflow: hidden;
 
 		ul {
 			display: flex;
@@ -151,57 +140,171 @@ a {
 			width: 100%;
 			border-bottom: 1px solid $lightGrey;
 			min-height: 80px;
+		}
 
+		p {
+			position: relative;
+			padding-left: 60px;
+			padding-right: 30px;
+			max-width: 200px;
+			margin: 0 auto;
+		}
+
+		.navigationPanel-navigation-search-p::before {
+			content: url("../img/navigationPanel/search.png");
+			position: absolute;
+			top: 4px;
+			left: 15px;
+		}
+		.navigationPanel-navigation-cart-p::before {
+			content: url("../img/navigationPanel/cart.png");
+			position: absolute;
+			top: 4px;
+			left: 15px;
+		}
+	
+		li:hover {
 			p {
-				position: relative;
-				padding-left: 60px;
-				padding-right: 30px;
-				max-width: 200px;
-  			margin: 0 auto;
+				opacity: 0.6;
 			}
-
-			.navigationPanel-navigation-search::before {
-				content: url("../img/navigationPanel/search.png");
-				position: absolute;
-				top: 4px;
-				left: 15px;
+			.navigationPanel-navigation-search-p::before {
+				content: url("../img/navigationPanel/search_hvr.png");
 			}
-			.navigationPanel-navigation-cart::before {
-				content: url("../img/navigationPanel/cart.png");
-				position: absolute;
-				top: 4px;
-				left: 15px;
+			.navigationPanel-navigation-cart-p::before {
+				content: url("../img/navigationPanel/cart_hvr.png");
 			}
 		}
-	}
-	li:hover {
-		opacity: 0.6;
-		.navigationPanel-navigation-search::before {
-			content: url("../img/navigationPanel/search_hvr.png");
+		li:active {
+			p {
+				opacity: 0.3;
+			}
+			.navigationPanel-navigation-search-p::before {
+				content: url("../img/navigationPanel/search_hvr.png");
+			}
+			.navigationPanel-navigation-cart-p::before {
+				content: url("../img/navigationPanel/cart_hvr.png");
+			}
 		}
-		.navigationPanel-navigation-cart::before {
-			content: url("../img/navigationPanel/cart_hvr.png");
-		}
-	}
-	li:active {
-		opacity: 0.3;
-		.navigationPanel-navigation-search::before {
-			content: url("../img/navigationPanel/search_hvr.png");
-		}
-		.navigationPanel-navigation-cart::before {
-			content: url("../img/navigationPanel/cart_hvr.png");
-		}
-	}
+  }
 
 	.hidden {
 		display: none;
-	} // ---------- end navigation panel styling ----------
+	} // ---------- end navigation list styling ----------
+
+	.navigationPanel-freeDelivery {
+		display: none;
+	}
+} 
+
+// ---------- tablet version navigation panel styling ----------
+@media only screen and (min-width: 768px) {
+.navigationPanel {
+	max-width: 100%;
+	padding: 0 50px;
+	min-height: 90px;
+	display: flex;
+	justify-content: space-between;
+	position: relative;
+	border-bottom: 1px solid $lightGrey;
+
+  // remove hamburger and border from logo box -----
+	.navigationPanel-logoToogleBox {
+		display: flex;
+		border: none;
+		.navigationPanel-toogle {
+			padding: 0;
+		}
+		.hamburger {
+			display: none;
+		}
+	}
+
+  // navigation list styling for tablet version -----
+	.navigationPanel-navigation {
+
+		ul {
+			flex-flow: row;
+			position: static;
+		}
+
+		li {
+			border: none;
+			min-height: 90px;
+		}	
+
+		p {
+			padding-right: 0px;
+		}
+
+		.navigationPanel-navigation-catalog {
+			position: absolute;
+			width: auto;
+			top: 73px;
+			left: 0%;
+			z-index: 1;
+			font-size: 14px;
+			line-height: 24px;			
+			p {
+				padding: 0;
+				padding-left: 50px;
+			}
+		}
+		.navigationPanel-navigation-knittingOrder {
+			position: absolute;
+			width: auto;
+			top: 73px;
+			left: 25%;
+			z-index: 1;
+			font-size: 14px;
+			line-height: 24px;
+			p {
+				padding: 0;
+				padding-left: 50px;
+			}
+		}
+
+		// search item styling
+		.navigationPanel-navigation-search {
+			width: 85px;
+			border-left: 1px solid $lightGrey;
+			border-right: 1px solid $lightGrey;
+		}
+		.navigationPanel-navigation-search-p {
+			visibility: hidden;
+		}
+		.navigationPanel-navigation-search-p::before {
+			visibility: visible;
+			top: 50%;
+   		left: 50%;
+    	transform: translateX(-50%) translateY(-50%);
+		} // end search item styling		
+	}
+
+	.navigationPanel-freeDelivery {
+		display: block;
+		margin: 0;
+		padding: 0;
+		font-weight: normal;
+		position: absolute;
+		top: 106px;
+		right: 50px;
+		color: $darkGrey;
+		font-size: 14px;
+		line-height: 24px;
+		z-index: 1;
+	}
+
+	.hidden {
+		display: flex;
+	}
+}
+
 } // ========== end navigation panel section ==========
 
 
 
-// ==============================================
-// ========== navigation panel section ==========
+// =======================================
+// ========== hand made section ==========
 .handMade {
 	background-color: $lightGrey;
 	background-image: url("../img/handmade/bg_mobile.jpg");
@@ -209,6 +312,7 @@ a {
 	background-position: center top;
 	max-width: 575px;
 	margin: 0 auto;
+	padding-top: 95px;
 
 	.handMade-title {
 		font-size: 24px;
@@ -216,9 +320,8 @@ a {
 		font-weight: bold;
 		text-align: center;
 		padding: 0 30px;
-		padding-top: 95px;
-		padding-bottom: 125px;
 		margin: 0;
+		margin-bottom: 125px;
 	}
 
 	.handMadeProduct-productBox {
@@ -264,13 +367,55 @@ a {
 			opacity: 0.3;
 		}
 	}
-} // ========== end navigation panel section ==========
+}
+
+
+// ---------- tablet version hand made section ----------
+@media only screen and (min-width: 768px) {
+
+.handMade {
+	max-width: 100%;
+	background-image: url("../img/handmade/bg_tablet.jpg");
+	padding-top: 155px;
+	margin: 0;
+	position: relative;
+
+	.handMade-title {
+		font-size: 40px;
+		line-height: 51px;
+		max-width: 500px;
+		margin: 0 auto;
+		margin-bottom: 370px;
+	}
+
+	.handMadeProduct-productBox {
+		flex-flow: row;
+		padding: 0 50px;
+	}
+
+	.handMadeProduct-productBox-item {
+		min-height: 120px;
+		padding: 0 35px;
+    flex-grow: 1;
+		font-size: 20px;
+		line-height: 30px;
+	}
+}
+.handMade::after {
+	content: url("../img/handMade/zigzag.svg");
+	position: absolute;
+	bottom: -10px;
+	width: 100%;
+}
+
+} // ========== end hand made section ==========
 
 
 
 // ==========================================
 // ========== Product Week section ==========
 .productWeek {
+	padding-top: 30px;
 
 	.container {
 		display: flex;
@@ -282,7 +427,6 @@ a {
 	}
 
 	header {
-		padding-top: 30px;
 		font-weight: bold;
 		h2 {
 			margin: 0;
@@ -380,8 +524,37 @@ a {
 .productWeek::after {
 	content: url("../img/zigzagLine.svg");
 	width: 100%;
-} // ========== end Product Week section ==========
+}
 
+// ---------- tablet version product week section ----------
+@media only screen and (min-width: 768px) {
+
+.productWeek {
+	padding-top: 40px;
+
+	.container {
+		max-width: 100%;
+		padding: 0 50px;
+	}
+
+	header {
+		display: flex;
+    justify-content: space-between;
+    width: 100%;
+    h2 {
+    	font-size: 40px;
+    	line-height: 50px;
+    }
+    p {
+    	max-width: 70px;
+    	text-align: center;
+    }
+	}
+
+
+}
+
+} // ========== end Product Week section ==========
 
 
 // ===================================
