--- a/app/css/main.css
+++ b/app/css/main.css
@@ -356,24 +356,24 @@ a {
     width: 100%; } }
 
 .productWeek {
-  padding-top: 30px; }
-  .productWeek .container {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-flow: column;
-        -ms-flex-flow: column;
-            flex-flow: column;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding-bottom: 35px;
-    font-family: 'Open Sans', sans-serif;
-    color: #444444; }
+  padding-top: 30px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: column;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
   .productWeek header {
     font-weight: bold; }
     .productWeek header h2 {
@@ -389,6 +389,24 @@ a {
       line-height: 16px;
       text-transform: uppercase;
       color: #63d1b2; }
+  .productWeek .container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-bottom: 165px;
+    font-family: 'Open Sans', sans-serif;
+    color: #444444;
+    position: relative; }
   .productWeek .productWeek-description {
     margin: 0;
     margin-top: 30px;
@@ -414,14 +432,16 @@ a {
       padding-left: 10%; }
   .productWeek img {
     margin-top: 25px;
-    max-width: 100%;
+    width: 100%;
+    max-width: 400px;
     -webkit-align-self: center;
         -ms-flex-item-align: center;
             align-self: center;
     min-height: 0; }
   .productWeek .productWeek-order {
-    margin-top: 25px;
-    width: 100%; }
+    position: absolute;
+    width: 80%;
+    bottom: 35px; }
     .productWeek .productWeek-order p {
       margin: 0;
       text-align: center;
@@ -455,26 +475,82 @@ a {
 
 @media only screen and (min-width: 768px) {
   .productWeek {
-    padding-top: 40px; }
-    .productWeek .container {
-      max-width: 100%;
-      padding: 0 50px; }
+    padding-top: 40px;
+    -webkit-box-align: normal;
+    -webkit-align-items: normal;
+        -ms-flex-align: normal;
+            align-items: normal; }
     .productWeek header {
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-flow: row;
+          -ms-flex-flow: row;
+              flex-flow: row;
       -webkit-box-pack: justify;
       -webkit-justify-content: space-between;
           -ms-flex-pack: justify;
               justify-content: space-between;
-      width: 100%; }
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      padding-left: 50px;
+      padding-right: 50px;
+      margin-bottom: 55px; }
       .productWeek header h2 {
         font-size: 40px;
         line-height: 50px; }
       .productWeek header p {
-        max-width: 70px;
-        text-align: center; } }
+        max-width: 90px;
+        text-align: center; }
+    .productWeek .container {
+      padding: 0;
+      padding-left: 50px;
+      padding-right: 50px;
+      max-width: 800px;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-flow: row;
+          -ms-flex-flow: row;
+              flex-flow: row;
+      -webkit-box-align: stretch;
+      -webkit-align-items: stretch;
+          -ms-flex-align: stretch;
+              align-items: stretch;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      padding-bottom: 50px; }
+    .productWeek .productWeek-orderBox {
+      width: 43%;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-flow: column;
+          -ms-flex-flow: column;
+              flex-flow: column;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
+    .productWeek .productWeek-description {
+      margin: 0px; }
+    .productWeek .productWeek-characteristicTable {
+      margin: 0; }
+    .productWeek .productWeek-order {
+      position: static;
+      width: 100%; }
+    .productWeek img {
+      max-width: 50%;
+      margin: 0; } }
 
 .about {
   padding-top: 30px; }
