--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -416,15 +416,10 @@ a {
 // ========== Product Week section ==========
 .productWeek {
 	padding-top: 30px;
-
-	.container {
-		display: flex;
-		flex-flow: column;
-		align-items: center;
-		padding-bottom: 35px;
-		font-family: 'Open Sans', sans-serif;
-		color: $darkGrey;
-	}
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
 
 	header {
 		font-weight: bold;
@@ -443,6 +438,16 @@ a {
 			text-transform: uppercase;
 			color: $turquoise;
 		}	
+	}
+
+	.container {
+		display: flex;
+		flex-flow: column;
+		align-items: center;
+		padding-bottom: 165px;
+		font-family: 'Open Sans', sans-serif;
+		color: $darkGrey;
+		position: relative;
 	}
 
 	.productWeek-description {
@@ -479,14 +484,16 @@ a {
 
 	img {
 		margin-top: 25px;
-		max-width: 100%;
+		width: 100%;
+		max-width: 400px;
 		align-self: center;
 		min-height: 0; // for save img height proportion
 	}
 
 	.productWeek-order {
-		margin-top: 25px;
-		width: 100%;
+		position: absolute;
+		width: 80%;
+		bottom: 35px;
 
 		p {
 			margin: 0;
@@ -528,32 +535,67 @@ a {
 
 // ---------- tablet version product week section ----------
 @media only screen and (min-width: 768px) {
-
 .productWeek {
 	padding-top: 40px;
-
-	.container {
-		max-width: 100%;
-		padding: 0 50px;
-	}
+	align-items: normal;
 
 	header {
 		display: flex;
+		flex-flow: row;
     justify-content: space-between;
-    width: 100%;
+    align-items: center;
+    padding-left: 50px;
+		padding-right: 50px;
+    margin-bottom: 55px;
+
     h2 {
     	font-size: 40px;
     	line-height: 50px;
     }
+
     p {
-    	max-width: 70px;
+    	max-width: 90px;
     	text-align: center;
     }
 	}
 
+	.container {
+		padding: 0;
+		padding-left: 50px;
+		padding-right: 50px;
+		max-width: 800px;
+    flex-flow: row;
+    align-items: stretch;
+    justify-content: space-between;
+    padding-bottom: 50px;
+	}
+
+	.productWeek-orderBox {
+		width: 43%;
+		display: flex;
+		flex-flow: column;
+		justify-content: space-between;
+	}
+
+	.productWeek-description {
+		margin: 0px;
+	}
+
+	.productWeek-characteristicTable {
+		margin: 0;
+	}
+
+	.productWeek-order {
+		position: static;
+		width: 100%;
+	}
+
+	img {
+		max-width: 50%;
+		margin: 0;
+	}
 
 }
-
 } // ========== end Product Week section ==========
 
 
